# AIRefinery

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/final_project/airefinery/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  causal_lm.cpp  causal_lm.h  llama_jni.cpp
app/src/main/java/com/final_project/airefinery/: CausalLM.java  CausalLMConfig.java  EnhancementMode.java  ExaoneCausalLM.java  GenerationParams.java  MainActivity.java  TokenCallback.java
app/src/main/res/drawable/: input_section_background.xml  output_section_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/final_project/airefinery/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
